cartopy/docs/v0.16/_sources/gallery/image_tiles.rst.txt


.. _sphx_glr_gallery_image_tiles.py:


Web tile imagery
----------------

This example demonstrates how imagery from a tile
providing web service can be accessed.





.. image:: /gallery/images/sphx_glr_image_tiles_001.png
    :align: center





.. code-block:: python


    import matplotlib.pyplot as plt
    import cartopy.crs as ccrs

    from cartopy.io.img_tiles import StamenTerrain


    def main():
        tiler = StamenTerrain()
        mercator = tiler.crs

        fig = plt.figure()
        ax = fig.add_subplot(1, 1, 1, projection=mercator)
        ax.set_extent([-90, -73, 22, 34], crs=ccrs.PlateCarree())

        ax.add_image(tiler, 6)

        ax.coastlines('10m')
        plt.show()


    if __name__ == '__main__':
        main()

**Total running time of the script:** ( 0 minutes  0.052 seconds)



.. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: image_tiles.py <image_tiles.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: image_tiles.ipynb <image_tiles.ipynb>`

.. rst-class:: sphx-glr-signature

    `Generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
