cartopy/docs/v0.17/_sources/gallery/image_tiles.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_gallery_image_tiles.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_image_tiles.py:


Web tile imagery
----------------

This example demonstrates how imagery from a tile
providing web service can be accessed.





.. image:: /gallery/images/sphx_glr_image_tiles_001.png
    :class: sphx-glr-single-img





.. code-block:: python


    import matplotlib.pyplot as plt
    import cartopy.crs as ccrs

    from cartopy.io.img_tiles import Stamen


    def main():
        tiler = Stamen('terrain-background')
        mercator = tiler.crs

        fig = plt.figure()
        ax = fig.add_subplot(1, 1, 1, projection=mercator)
        ax.set_extent([-90, -73, 22, 34], crs=ccrs.PlateCarree())

        ax.add_image(tiler, 6)

        ax.coastlines('10m')
        plt.show()


    if __name__ == '__main__':
        main()

**Total running time of the script:** ( 0 minutes  0.012 seconds)


.. _sphx_glr_download_gallery_image_tiles.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: image_tiles.py <image_tiles.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: image_tiles.ipynb <image_tiles.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
